feat(jumppad): add jump state :sparkles: